docs: update api docs for /market-price
